compiler/lume_parser/src/snapshots/lume_parser__tests__generic_enum_snapshots@no_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Test {}\")"
---
SOURCE_FILE@0..12
  ENUM@0..12
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    NAME@5..9
      IDENT@5..9 "Test"
    WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    RIGHT_BRACE@11..12 "}"
