compiler/lume_parser/src/snapshots/lume_parser__tests__generic_enum_snapshots@single_generic.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"enum Test<T> {}\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                visibility: Private {
                    location: Location(
                        0..0,
                    ),
                },
                name: Identifier {
                    name: "Test",
                    location: Location(
                        5..9,
                    ),
                },
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T",
                            location: Location(
                                10..11,
                            ),
                        },
                        constraints: [],
                    },
                ],
                cases: [],
                location: Location(
                    0..15,
                ),
                documentation: None,
            },
        ),
    ),
]
