compiler/lume_parser/src/snapshots/lume_parser__tests__generic_enum_snapshots@trailing_generic_comma.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"enum Test<T1,> {}\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                visibility: Private(
                    Private {
                        location: Location(
                            0..0,
                        ),
                    },
                ),
                name: Identifier {
                    name: "Test",
                    location: Location(
                        5..9,
                    ),
                },
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                10..12,
                            ),
                        },
                        constraints: [],
                    },
                ],
                cases: [],
                location: Location(
                    0..17,
                ),
                documentation: None,
            },
        ),
    ),
]
