compiler/lume_parser/src/snapshots/lume_parser__tests__generic_struct_snapshots@no_generics.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"struct Test {}\")"
---
[
    TypeDefinition(
        Struct(
            StructDefinition {
                visibility: Private(
                    Private {
                        location: Location(
                            0..6,
                        ),
                    },
                ),
                name: Identifier {
                    name: "Test",
                    location: Location(
                        7..11,
                    ),
                },
                builtin: false,
                properties: [],
                type_parameters: [],
                location: Location(
                    0..14,
                ),
                documentation: None,
            },
        ),
    ),
]
