compiler/lume_parser/src/snapshots/lume_parser__tests__imports@empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"import std::io ()\")"
---
SOURCE_FILE@0..17
  IMPORT@0..17
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    IMPORT_PATH@7..15
      NAME@7..10
        IDENT@7..10 "std"
      PATH_SEP@10..12 "::"
      NAME@12..14
        IDENT@12..14 "io"
      WHITESPACE@14..15 " "
    IMPORT_LIST@15..17
      LEFT_PAREN@15..16 "("
      RIGHT_PAREN@16..17 ")"
