compiler/lume_parser/src/snapshots/lume_parser__tests__imports@expected_identifier.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"import std::io::\")"
---
SOURCE_FILE@0..16
  IMPORT@0..16
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    IMPORT_PATH@7..16
      NAME@7..10
        IDENT@7..10 "std"
      PATH_SEP@10..12 "::"
      NAME@12..14
        IDENT@12..14 "io"
      PATH_SEP@14..16 "::"
      NAME@16..16

expected identifier@14..15
invalid import path@0..0
