compiler/lume_parser/src/snapshots/lume_parser__tests__imports@invalid_import_path.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"import std::io\")"
---
SOURCE_FILE@0..14
  IMPORT@0..14
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    IMPORT_PATH@7..14
      NAME@7..10
        IDENT@7..10 "std"
      PATH_SEP@10..12 "::"
      NAME@12..14
        IDENT@12..14 "io"

invalid import path@12..13
