compiler/lume_parser/src/snapshots/lume_parser__tests__imports@multiple.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"import std::io (File, Buffer)\")"
---
SOURCE_FILE@0..29
  IMPORT@0..29
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    IMPORT_PATH@7..15
      NAME@7..10
        IDENT@7..10 "std"
      PATH_SEP@10..12 "::"
      NAME@12..14
        IDENT@12..14 "io"
      WHITESPACE@14..15 " "
    IMPORT_LIST@15..29
      LEFT_PAREN@15..16 "("
      NAME@16..20
        IDENT@16..20 "File"
      COMMA@20..21 ","
      WHITESPACE@21..22 " "
      NAME@22..28
        IDENT@22..28 "Buffer"
      RIGHT_PAREN@28..29 ")"
