compiler/lume_parser/src/snapshots/lume_parser__tests__imports@nested.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"import std::io (File)\")"
---
[
    Import(
        Import {
            path: ImportPath {
                path: [
                    Identifier {
                        name: "std",
                        location: Location(
                            7..10,
                        ),
                    },
                    Identifier {
                        name: "io",
                        location: Location(
                            12..14,
                        ),
                    },
                ],
                location: Location(
                    7..14,
                ),
            },
            names: [
                Identifier {
                    name: "File",
                    location: Location(
                        16..20,
                    ),
                },
            ],
            location: Location(
                0..21,
            ),
        },
    ),
]
