compiler/lume_parser/src/snapshots/lume_parser__tests__imports@single.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"import std (Int)\")"
---
SOURCE_FILE@0..16
  IMPORT@0..16
    IMPORT_KW@0..6 "import"
    WHITESPACE@6..7 " "
    IMPORT_PATH@7..11
      NAME@7..10
        IDENT@7..10 "std"
      WHITESPACE@10..11 " "
    IMPORT_LIST@11..16
      LEFT_PAREN@11..12 "("
      NAME@12..15
        IDENT@12..15 "Int"
      RIGHT_PAREN@15..16 ")"
